--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,7 +7,8 @@
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "test:unit": "jest --watch --testPathPatterns=tests/unit"
   },
   "dependencies": {
     "@emotion/react": "^11.14.0",
@@ -18,6 +19,7 @@
     "@mui/material": "^7.1.2",
     "@tabler/icons-react": "^3.34.0",
     "@tailwindcss/vite": "^4.1.10",
+    "@testing-library/react": "^16.3.0",
     "axios": "^1.10.0",
     "framer-motion": "^12.19.1",
     "jwt-decode": "^4.0.0",
@@ -27,7 +29,10 @@
     "tailwindcss": "^4.1.10"
   },
   "devDependencies": {
+    "@babel/preset-env": "^7.28.0",
+    "@babel/preset-react": "^7.27.1",
     "@eslint/js": "^9.29.0",
+    "@testing-library/jest-dom": "^6.6.3",
     "@types/react": "^19.1.8",
     "@types/react-dom": "^19.1.6",
     "@vitejs/plugin-react": "^4.5.2",
@@ -35,6 +40,8 @@
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.20",
     "globals": "^16.2.0",
+    "jest": "^30.0.4",
+    "jest-environment-jsdom": "^30.0.4",
     "vite": "^6.3.5"
   }
 }
