--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,7 +8,9 @@
     "build": "vite build",
     "lint": "eslint .",
     "preview": "vite preview",
-    "test:unit": "jest --watch --testPathPatterns=tests/unit"
+    "test:unit": "jest --coverage --testPathPatterns=tests/unit",
+    "test:integration-its": "jest --coverage --testPathPatterns=tests/integration/in-the-small",
+    "test:integration-itl": "jest --coverage --testPathPatterns=tests/integration/in-the-large"
   },
   "dependencies": {
     "@emotion/react": "^11.14.0",
@@ -19,10 +21,10 @@
     "@mui/material": "^7.1.2",
     "@tabler/icons-react": "^3.34.0",
     "@tailwindcss/vite": "^4.1.10",
-    "@testing-library/react": "^16.3.0",
     "axios": "^1.10.0",
     "framer-motion": "^12.19.1",
     "jwt-decode": "^4.0.0",
+    "node-fetch": "^2.7.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-router-dom": "^7.6.2",
@@ -33,15 +35,19 @@
     "@babel/preset-react": "^7.27.1",
     "@eslint/js": "^9.29.0",
     "@testing-library/jest-dom": "^6.6.3",
+    "@testing-library/react": "^16.3.0",
     "@types/react": "^19.1.8",
     "@types/react-dom": "^19.1.6",
     "@vitejs/plugin-react": "^4.5.2",
+    "axios-mock-adapter": "^2.1.0",
     "eslint": "^9.29.0",
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.20",
     "globals": "^16.2.0",
     "jest": "^30.0.4",
     "jest-environment-jsdom": "^30.0.4",
-    "vite": "^6.3.5"
+    "msw": "^2.10.2",
+    "vite": "^6.3.5",
+    "whatwg-fetch": "^3.6.20"
   }
 }
