--- a/.github/workflows/dev-env-testing.yaml
+++ b/.github/workflows/dev-env-testing.yaml
@@ -7,11 +7,6 @@ jobs:
   dev-testing:
     runs-on: ubuntu-latest
 
-    services:
-      docker:
-        image: docker:24.0.7
-        options: --privileged
-
     steps:
     - name: Checkout code
       uses: actions/checkout@v4
@@ -19,8 +14,8 @@ jobs:
     - name: Set up Docker Buildx
       uses: docker/setup-buildx-action@v3
 
-    - name: Set up Docker Compose
-      uses: docker/setup-compose-action@v3
+    - name: Set up QEMU
+      uses: docker/setup-qemu-action@v3
 
     - name: Build and start containers
       run: |
@@ -33,6 +28,18 @@ jobs:
     - name: Run frontend integration tests
       run: |
         docker compose exec frontend npm run test:integration-itl
+
+    - name: Dump backend logs on failure
+      if: failure()
+      run: |
+        echo "==== Backend Logs ===="
+        docker compose logs backend
+
+    - name: Dump frontend logs on failure
+      if: failure()
+      run: |
+        echo "==== Frontend Logs ===="
+        docker compose logs frontend
 
     - name: Tear down
       if: always()
