--- a/.github/workflows/dev-env-testing.yaml
+++ b/.github/workflows/dev-env-testing.yaml
@@ -16,7 +16,13 @@ jobs:
 
     - name: Set up QEMU
       uses: docker/setup-qemu-action@v3
-
+      
+    - name: Set Up environment Variables
+      run: |
+        echo "DB_NAME=${{ secrets.DB_NAME }}" >> .env
+        echo "DB_PASSWORD=${{ secrets.DB_PASSWORD }}" >> .env
+        echo "DJANGO_SECRET=${{ secrets.DJANGO_SECRET }}" >> .env
+        
     - name: Build and start containers
       run: |
         docker compose up -d
