--- a/.github/workflows/dev-env-testing.yaml
+++ b/.github/workflows/dev-env-testing.yaml
@@ -21,7 +21,7 @@ jobs:
       run: |
         echo "DB_NAME=${{ secrets.DB_NAME }}" >> .env
         echo "DB_PASSWORD=${{ secrets.DB_PASSWORD }}" >> .env
-        echo "DJANGO_SECRET=${{ secrets.DJANGO_SECRET }}'" >> .env
+        echo "DJANGO_SECRET=${{ secrets.DJANGO_SECRET }}" >> .env
         
     - name: Build and start containers
       run: |
