--- a/.github/workflows/staging-env-test.yaml
+++ b/.github/workflows/staging-env-test.yaml
@@ -1,108 +1,59 @@
-name: Deploy to Staging
+name: K6 Load Testing Pipeline
+
+#on:
+#  repository_dispatch:
+#    types: [run-k6-load-test]
+#  workflow_dispatch:
 
 on:
-  workflow_dispatch: # manual trigger only
-
+  workflow_run:
+    workflows: [ 'Deploy to Staging' ]
+    types:
+      - completed
+    workflow_dispatch:
 
 jobs:
-  aws_instance_prep:
+  k6-load-test:
     runs-on: ubuntu-latest
 
-    outputs:
-      instance_id: ${{ steps.set_env.outputs.instance_id }}
-      public_ip: ${{ steps.get_ip.outputs.public_ip }}
+    env:
+      BASE_URL: ${{ secrets.EC2_PUBLIC_IP }}  # Set this secret in your repository for flexibility
 
     steps:
-      - name: Configure AWS Credentials
+      - name: Checkout repository
+        uses: actions/checkout@v4
+
+      - name: Install Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: '20'
+
+      - name: Install k6
         run: |
-          aws configure set aws_access_key_id ${{ secrets.AWS_ACCESS_KEY_ID }}
-          aws configure set aws_secret_access_key ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          aws configure set default.region ${{ secrets.AWS_REGION }}
+          sudo apt-get update
+          sudo apt-get install -y gnupg software-properties-common wget
+          wget -q -O - https://dl.k6.io/key.gpg | sudo apt-key add -
+          echo "deb https://dl.k6.io/deb stable main" | sudo tee -a /etc/apt/sources.list
+          sudo apt-get update
+          sudo apt-get install -y k6
 
-      - name: Check for existing EC2 instance
-        id: check_instance
+      - name: Run k6 Load Test with dynamic BASE_URL
         run: |
-          INSTANCE_ID=$(aws ec2 describe-instances \
-            --filters "Name=tag:Name,Values=daystride-ec2" "Name=instance-state-name,Values=running" \
-            --query "Reservations[0].Instances[0].InstanceId" \
-            --output text)
+          k6 run --summary-export=summary.json ./stagingTests/load/daystride_ec2_load_testing.js
 
-          if [[ "$INSTANCE_ID" == "None" ]]; then
-            echo "EXISTING_INSTANCE=false" >> $GITHUB_ENV
-          else
-            echo "EXISTING_INSTANCE=true" >> $GITHUB_ENV
-            echo "INSTANCE_ID=$INSTANCE_ID" >> $GITHUB_ENV
-          fi
-
-      - name: Launch EC2 Instance if needed
-        if: env.EXISTING_INSTANCE == 'false'
+      - name: Clone k6-reporter
         run: |
-          INSTANCE_ID=$(aws ec2 run-instances \
-            --launch-template LaunchTemplateId=${{ secrets.EC2_LAUNCH_TEMPLATE_ID }} \
-            --tag-specifications "ResourceType=instance,Tags=[{Key=Name,Value=daystride-ec2}]" \
-            --query 'Instances[0].InstanceId' \
-            --output text)
-          echo "INSTANCE_ID=$INSTANCE_ID" >> $GITHUB_ENV
+          git clone https://github.com/majodev/k6-reporter.git
+          cd k6-reporter
+          npm install
 
-      - name: Wait for instance to be ready
+      - name: Generate HTML report
         run: |
-          INSTANCE_ID=${{ env.INSTANCE_ID }}
-          echo "Waiting for EC2 ($INSTANCE_ID) to be ready..."
-          aws ec2 wait instance-status-ok --instance-ids $INSTANCE_ID
-          echo "Instance is ready."
+          cd k6-reporter
+          node cli.js ../summary.json ../report.html
 
-      - name: Get EC2 Public IP
-        id: get_ip
-        run: |
-          PUBLIC_IP=$(aws ec2 describe-instances \
-            --instance-ids ${{ env.INSTANCE_ID }} \
-            --query "Reservations[0].Instances[0].PublicIpAddress" \
-            --output text)
-          echo "public_ip=$PUBLIC_IP" >> $GITHUB_OUTPUT
-
-      - name: Set instance ID output
-        id: set_env
-        run: echo "instance_id=${{ env.INSTANCE_ID }}" >> $GITHUB_OUTPUT
-
-      - name: Print Public IP to Console
-        run: |
-          echo "============================================"
-          echo "✅ EC2 Instance is ready!"
-          echo "🌍 Public IP Address: http://${{ steps.get_ip.outputs.public_ip }}"
-          echo "============================================"
-
-  deploy:
-    runs-on: ubuntu-latest
-    needs: aws_instance_prep
-
-    steps:
-      - name: Checkout Code
-        uses: actions/checkout@v3
-
-      - name: Setup SSH Key
-        run: |
-          echo "${{ secrets.EC2_SSH_PRIVATE_KEY }}" > ec2_key.pem
-          chmod 600 ec2_key.pem
-
-      - name: Copy docker-compose.yaml to EC2
-        run: |
-          scp -i ec2_key.pem -o StrictHostKeyChecking=no docker-compose.yaml ec2-user@${{ needs.aws_instance_prep.outputs.public_ip }}:/home/ec2-user/docker-compose.yml
-
-      - name: Deploy with docker-compose
-        env:
-          DJANGO_SECRET: ${{ secrets.DJANGO_SECRET }}
-          DB_NAME: ${{ secrets.DB_NAME }}
-          DB_PORT: ${{ secrets.DB_PORT }}
-          DB_PASSWORD: ${{ secrets.DB_PASSWORD }}
-          FRONTEND_HOST: ${{ secrets.FRONTEND_HOST }}
-        run: |
-          ssh -i ec2_key.pem -o StrictHostKeyChecking=no ec2-user@${{ needs.aws_instance_prep.outputs.public_ip }} "
-            echo 'DJANGO_SECRET=${DJANGO_SECRET}' > /home/ec2-user/.env &&
-            echo 'DB_NAME=${DB_NAME}' >> /home/ec2-user/.env &&
-            echo 'DB_PORT=${DB_PORT}' >> /home/ec2-user/.env &&
-            echo 'DB_PASSWORD=${DB_PASSWORD}' >> /home/ec2-user/.env &&
-            echo 'FRONTEND_HOST=${FRONTEND_HOST}' >> /home/ec2-user/.env &&
-            cd /home/ec2-user &&
-            docker-compose --env-file .env down || true &&
-            docker-compose --env-file .env up -d
-          "
+      - name: Upload HTML report artifact
+        uses: actions/upload-artifact@v4
+        with:
+          name: k6-loadtest-report
+          path: report.html
