--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,7 +12,7 @@
     "test:unit": "jest --coverage --testPathPatterns=tests/unit",
     "test:integration-its": "jest --coverage --testPathPatterns=tests/integration/in-the-small",
     "test:integration-itl": "jest --coverage --testPathPatterns=tests/integration/in-the-large",
-    "test:ui": "npx playwright test"
+    "test:ui-e2e": "npx playwright test"
   },
   "dependencies": {
     "@emotion/react": "^11.14.0",
