--- a/.github/workflows/deploy-stage-env.yaml
+++ b/.github/workflows/deploy-stage-env.yaml
@@ -73,7 +73,7 @@ jobs:
 
       - name: Upload Public IP to Repo Secret
         env:
-          GH_PAT: ${{ secrets.GH_PAT }}
+          GH_PAT: ${{ secrets.GH_PAT_CLASSIC }}
           PUBLIC_IP: ${{ steps.get_ip.outputs.public_ip }}
           REPO: ${{ github.repository }}
         run: |
