--- a/.github/workflows/deploy-stage-env.yaml
+++ b/.github/workflows/deploy-stage-env.yaml
@@ -71,6 +71,9 @@ jobs:
           echo "🌍 Public IP Address: http://${{ steps.get_ip.outputs.public_ip }}"
           echo "============================================"
 
+      - name: Checkout repository
+        uses: actions/checkout@v4
+
       - name: Upload EC2_PUBLIC_IP to secret
         run: |
           gh secret set EC2_PUBLIC_IP -b"${{ steps.get_ip.outputs.public_ip }}"
