--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -74,13 +74,11 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v4
 
-      - name: Upload EC2_PUBLIC_IP to secret
+      - name: Upload EC2_PUBLIC_IP to repo variable
         run: |
-          gh secret set EC2_PUBLIC_IP -b"${{ steps.get_ip.outputs.public_ip }}"
+          gh variable set EC2_PUBLIC_IP -b"${{ steps.get_ip.outputs.public_ip }}"
         env:
           GH_TOKEN: ${{ secrets.GH_PAT_CLASSIC }}
-
-
 
   deploy:
     runs-on: ubuntu-latest
