--- a/.github/workflows/load-tests.yaml
+++ b/.github/workflows/load-tests.yaml
@@ -14,10 +14,11 @@ on:
 
 jobs:
   k6-load-test:
+    if: ${{ github.event.workflow_run.conclusion == 'success' }}
     runs-on: ubuntu-latest
 
     env:
-      BASE_URL: ${{ secrets.EC2_PUBLIC_IP }}  # Set this secret in your repository for flexibility
+      BASE_URL: ${{ vars.EC2_PUBLIC_IP }}  # Set this secret in your repository for flexibility
 
     steps:
       - name: Checkout repository
