--- a/.github/workflows/security-tests.yaml
+++ b/.github/workflows/security-tests.yaml
@@ -15,7 +15,7 @@ jobs:
       - name: ZAP Baseline Scan
         uses: zaproxy/action-baseline@v0.10.0
         with:
-          target: "http://${{ secrets.EC2_PUBLIC_IP }}"
+          target: "${{ vars.EC2_PUBLIC_IP }}"
           cmd_options: "-a"  # active scan for aggressive checks
       - name: Upload ZAP Report
         uses: actions/upload-artifact@v4
