--- a/.github/workflows/security-tests.yaml
+++ b/.github/workflows/security-tests.yaml
@@ -2,23 +2,41 @@ name: Security Test - ZAP DAST Scan on EC2
 
 on:
   workflow_run:
-    workflows: [ 'K6 Load Testing Pipeline' ]
+    workflows: ['K6 Load Testing Pipeline']
     types:
       - completed
   workflow_dispatch:
 
 jobs:
   zap_scan:
-   # if: ${{ github.event.workflow_run.conclusion == 'success' }}
+    #if: ${{ github.event.workflow_run.conclusion == 'success' }}
     runs-on: ubuntu-latest
+
+    # Disable GitHub issue creation by removing GITHUB_TOKEN
+    env:
+      GITHUB_TOKEN: ""
+
     steps:
       - name: ZAP Baseline Scan
         uses: zaproxy/action-baseline@v0.10.0
         with:
           target: "${{ vars.EC2_PUBLIC_IP }}"
           cmd_options: "-a"  # active scan for aggressive checks
-      - name: Upload ZAP Report
+
+      - name: Upload ZAP HTML Report
         uses: actions/upload-artifact@v4
         with:
           name: zap-report
-          path: zap-report.html
+          path: report_html.html
+
+      - name: Upload ZAP Markdown Report
+        uses: actions/upload-artifact@v4
+        with:
+          name: zap-report-md
+          path: report_md.md
+
+      - name: Upload ZAP JSON Report
+        uses: actions/upload-artifact@v4
+        with:
+          name: zap-report-json
+          path: report_json.json
