--- a/.github/workflows/security-tests.yaml
+++ b/.github/workflows/security-tests.yaml
@@ -9,19 +9,16 @@ on:
 
 jobs:
   zap_scan:
-    #if: ${{ github.event.workflow_run.conclusion == 'success' }}
+            #if: ${{ github.event.workflow_run.conclusion == 'success' }}
     runs-on: ubuntu-latest
-
-    # Disable GitHub issue creation by removing GITHUB_TOKEN
-    env:
-      GITHUB_TOKEN: ""
 
     steps:
       - name: ZAP Baseline Scan
-        uses: zaproxy/action-baseline@v0.10.0
+        uses: zaproxy/action-baseline@v0.14.0
         with:
           target: "${{ vars.EC2_PUBLIC_IP }}"
-          cmd_options: "-a"  # active scan for aggressive checks
+          cmd_options: "-a"                 # aggressive scan
+          allow_issue_writing: false        # disables GitHub issue creation
 
       - name: Upload ZAP HTML Report
         uses: actions/upload-artifact@v4
