--- a/docker-dev.yaml
+++ b/docker-dev.yaml
@@ -8,7 +8,7 @@ services:
     volumes:
       - ./db_data:/var/lib/mysql
     healthcheck:
-      test: [ "CMD", "mysqladmin", "ping", "-h", "localhost" ]
+      test: ["CMD", "mysql", "-uroot", "-p${DB_PASSWORD}", "-e", "USE ${DB_NAME};"]
       interval: 5s
       timeout: 10s
       retries: 10
